--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,21 @@
 cmake_minimum_required(VERSION 3.01)
 
+if (WIN32 AND MSVC_TOOLSET_VERSION LESS 140)
+    message(
+        FATAL_ERROR
+        "liblzma requires at least Visual Studio 2015"
+    )
+endif ()
 
+project(
+    lzma
+    VERSION 19.0
+    DESCRIPTION "Cross-platform decompiler for scenes.image file."
+    LANGUAGES C
+)
 
-
-
-#TODO: stop if we use vs2015 or older
-
-project(lzma VERSION 19.0
-                  DESCRIPTION "Cross-platform decompiler for scenes.image file."
-                  LANGUAGES C)
-
-
-
-
-
-
-set(SOURCES
+set(
+    SOURCES
     "src/Alloc.c"
     "src/LzFind.c"
     "src/LzmaDec.c"
@@ -26,39 +26,40 @@ set(SOURCES
     "include/LzmaDec.h"
     "include/LzmaEnc.h"
     "include/LzmaLib.h"
-    "include/7zTypes.h")
+    "include/7zTypes.h"
+)
 
-if(WIN32)
-    set(SOURCES ${SOURCES}
+if (WIN32)
+    set(
+        SOURCES 
+        ${SOURCES}
         "src/win/LzFindMt.c"
         "src/win/LzmaLibExports.c"
         "src/win/Threads.c"
         "include/win/LzFindMt.h"
         "include/win/Threads.h"
         "src/win/LzmaLib.def"
-        "src/win/resource.rc")
-endif()
-# Dodaj źródło do pliku wykonywalnego tego projektu.
-add_library (lzma STATIC ${SOURCES})
+        "src/win/resource.rc"
+    )
+endif ()
 
+add_library (lzma STATIC ${SOURCES})
 
 if (NOT MSVC)
     set (CFLAGS " -c -O2 -Wall -fPIC")
     target_compile_definitions(lzma PUBLIC _7ZIP_ST)
-elseif(MINGW)
+elseif (MINGW)
     set (CFLAGS " -c -O2 -Wall")
-endif()
+endif ()
 
 target_precompile_headers(lzma PUBLIC "include/Precomp.h")
 
+target_include_directories(
+    lzma PUBLIC
+    "${PROJECT_SOURCE_DIR}/include/"
+)
 
-target_include_directories(lzma PUBLIC
-    "${PROJECT_SOURCE_DIR}/include/")
-
-
-if(WIN32)
+if (WIN32)
     target_include_directories(lzma PUBLIC
         "${PROJECT_SOURCE_DIR}/include/win")
-endif()
-
-
+endif ()
